--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ ul, ol {
   border: 1px solid #E4E7ED;
   background-color: #FFF;
   width: 100%;
+  border-radius: 40px;
 }
 
 textarea.input {
@@ -486,7 +487,8 @@ textarea.input {
   color: #FFF;
   font-weight: 700;
   border: none;
-  border-radius: 0px 40px 40px 0px;
+  margin-left: 5px;
+  border-radius: 40px 40px 40px 40px;
 }
 
 /*----------------------------*\
