--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ Author: yaminncco
 Colors:
 	Body 		: #333
 	Headers 	: #2B2D42
-	Primary 	: #D10024
+	Primary 	: #ffa53e
 	Dark 		: #15161D ##1E1F29
 	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
 
@@ -75,7 +75,7 @@ a {
 }
 
 a:hover, a:focus {
-  color: #D10024;
+  color: #ffa53e;
   text-decoration: none;
   outline: none;
 }
@@ -93,7 +93,7 @@ ul, ol {
 .primary-btn {
   display: inline-block;
   padding: 12px 30px;
-  background-color: #D10024;
+  background-color: #ffa53e;
   border: none;
   border-radius: 40px;
   color: #FFF;
@@ -178,7 +178,7 @@ textarea.input {
 
 .input-number .qty-up:hover, .input-number .qty-down:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 /*-- Select input --*/
@@ -258,8 +258,8 @@ textarea.input {
 }
 
 .input-radio input[type="radio"]:checked+label span, .input-checkbox input[type="checkbox"]:checked+label span {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #ffa53e;
+  border-color: #ffa53e;
 }
 
 .input-radio input[type="radio"]:checked+label span:after {
@@ -336,13 +336,13 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: #ffa53e;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
 
 .section-tab-nav li.active a {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .section-tab-nav li a:hover:after, .section-tab-nav li a:focus:after, .section-tab-nav li.active a:after {
@@ -400,7 +400,7 @@ textarea.input {
 }
 
 #breadcrumb .breadcrumb-tree li a:hover {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 /*=========================================================
@@ -432,11 +432,11 @@ textarea.input {
 }
 
 .header-links li a:hover {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .header-links li i {
-  color: #D10024;
+  color: #ffa53e;
   margin-right: 5px;
 }
 
@@ -483,7 +483,7 @@ textarea.input {
 .header-search form .search-btn {
   height: 40px;
   width: 100px;
-  background: #ff8900;
+  background: #ffa53e;
   color: #FFF;
   font-weight: 700;
   border: none;
@@ -536,7 +536,7 @@ textarea.input {
   border-radius: 50%;
   font-size: 10px;
   color: #FFF;
-  background-color: #D10024;
+  background-color: #ffa53e;
 }
 
 .header-ctn .menu-toggle {
@@ -594,7 +594,7 @@ textarea.input {
   display: inline-block;
   width: calc(50% - 0px);
   padding: 12px;
-  background-color: #D10024;
+  background-color: #ffa53e;
   color: #FFF;
   text-align: center;
   font-weight: 700;
@@ -624,7 +624,7 @@ textarea.input {
 #navigation {
   background: #FFF;
   border-bottom: 2px solid #E4E7ED;
-  border-top: 3px solid #ff8900;
+  border-top: 3px solid #ffa53e;
 }
 
 /*----------------------------*\
@@ -640,7 +640,7 @@ textarea.input {
 }
 
 .main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
-  color: #ff8900;
+  color: #ffa53e;
   background-color: transparent;
 }
 
@@ -649,7 +649,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #ff8900;
+  background-color: #ffa53e;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -727,7 +727,7 @@ textarea.input {
   bottom: 0;
   left: 0px;
   width: 60%;
-  background: #ff8900;
+  background: #ffa53e;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg);
   -ms-transform: skewX(-45deg);
@@ -809,7 +809,7 @@ textarea.input {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: #D10024e6;
+  background: #ffa53ee6;
   text-align: center;
   border-radius: 50%;
   margin: 0px 5px;
@@ -864,8 +864,8 @@ textarea.input {
 }
 
 .product:hover {
-  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
-  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
+  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #ffa53e;
+  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #ffa53e;
 }
 
 .product .product-img {
@@ -890,13 +890,13 @@ textarea.input {
 
 .product .product-img .product-label>span.sale {
   background-color: #FFF;
-  border-color: #D10024;
-  color: #D10024;
+  border-color: #ffa53e;
+  color: #ffa53e;
 }
 
 .product .product-img .product-label>span.new {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #ffa53e;
+  border-color: #ffa53e;
   color: #FFF;
 }
 
@@ -924,11 +924,11 @@ textarea.input {
 }
 
 .product .product-body .product-name>a:hover, .product .product-body .product-name>a:focus {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .product .product-body .product-price {
-  color: #D10024;
+  color: #ffa53e;
   font-size: 18px;
 }
 
@@ -954,7 +954,7 @@ textarea.input {
 }
 
 .product .product-body .product-rating>i.fa-star {
-  color: #ef233c;
+  color: #ffa53e;
 }
 
 .product .product-body .product-rating:after {
@@ -983,7 +983,7 @@ textarea.input {
 
 .product .product-body .product-btns>button:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #ffa53e;
   border-radius: 50%;
 }
 
@@ -1043,7 +1043,7 @@ textarea.input {
   border: 2px solid transparent;
   height: 40px;
   padding: 0 30px;
-  background-color: #ef233c;
+  background-color: #ffa53e;
   color: #FFF;
   text-transform: uppercase;
   font-weight: 700;
@@ -1059,15 +1059,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: #ffa53e;
   opacity: 0;
   visibility: hidden;
 }
 
 .product .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: #ffa53e;
+  border-color: #ffa53e;
   padding: 0px 30px 0px 50px;
 }
 
@@ -1120,12 +1120,12 @@ textarea.input {
 }
 
 .product-widget .product-body .product-name>a:hover, .product-widget .product-body .product-name>a:focus {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .product-widget .product-body .product-price {
   font-size: 14px;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .product-widget .product-body .product-price .product-old-price {
@@ -1251,7 +1251,7 @@ textarea.input {
 }
 
 .noUi-connect {
-  background-color: #D10024;
+  background-color: #ffa53e;
 }
 
 .noUi-horizontal {
@@ -1264,7 +1264,7 @@ textarea.input {
   left: -6px;
   top: -4px;
   border: none;
-  background: #D10024;
+  background: #ffa53e;
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 50%;
@@ -1325,12 +1325,12 @@ textarea.input {
 
 .store-grid li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .store-grid li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #ffa53e;
+  border-color: #ffa53e;
   color: #FFF;
   cursor: default;
 }
@@ -1363,12 +1363,12 @@ textarea.input {
 
 .store-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .store-pagination li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #ffa53e;
+  border-color: #ffa53e;
   color: #FFF;
   font-weight: 500;
   cursor: default;
@@ -1432,7 +1432,7 @@ textarea.input {
 }
 
 #product-imgs .product-preview.slick-current {
-  border-color: #D10024;
+  border-color: #ffa53e;
 }
 
 #product-imgs .slick-prev {
@@ -1482,7 +1482,7 @@ textarea.input {
 }
 
 .product-details .product-rating>i.fa-star {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .product-details .review-link {
@@ -1494,7 +1494,7 @@ textarea.input {
   font-size: 24px;
   margin-top: 10px;
   margin-bottom: 15px;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .product-details .product-price .product-old-price {
@@ -1508,7 +1508,7 @@ textarea.input {
   text-transform: uppercase;
   font-weight: 700;
   margin-left: 30px;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .product-details .product-options {
@@ -1537,7 +1537,7 @@ textarea.input {
   border: 2px solid transparent;
   height: 40px;
   padding: 0 30px;
-  background-color: #ef233c;
+  background-color: #ffa53e;
   color: #FFF;
   text-transform: uppercase;
   font-weight: 700;
@@ -1553,15 +1553,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: #ffa53e;
   opacity: 0;
   visibility: hidden;
 }
 
 .product-details .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: #ffa53e;
+  border-color: #ffa53e;
   padding: 0px 30px 0px 50px;
 }
 
@@ -1651,7 +1651,7 @@ textarea.input {
 }
 
 #product-tab .tab-nav li.active a {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 #product-tab .tab-nav li a:after {
@@ -1659,7 +1659,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: #ffa53e;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -1689,7 +1689,7 @@ textarea.input {
 }
 
 .rating-avg .rating-stars>i.fa-star, .rating .rating-stars>i.fa-star {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .rating li {
@@ -1707,7 +1707,7 @@ textarea.input {
 }
 
 .rating .rating-progress>div {
-  background-color: #D10024;
+  background-color: #ffa53e;
   position: absolute;
   left: 0;
   top: 0;
@@ -1761,7 +1761,7 @@ textarea.input {
 }
 
 .reviews .review-heading .review-rating>i.fa-star {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .reviews-pagination {
@@ -1782,12 +1782,12 @@ textarea.input {
 
 .reviews-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .reviews-pagination li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #ffa53e;
+  border-color: #ffa53e;
   color: #FFF;
   cursor: default;
 }
@@ -1831,12 +1831,12 @@ textarea.input {
 }
 
 .review-form .input-rating .stars>label:hover:before, .review-form .input-rating .stars>label:hover~label:before {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .review-form .input-rating .stars>input:checked label:before, .review-form .input-rating .stars>input:checked~label:before {
   content: "\f005";
-  color: #D10024;
+  color: #ffa53e;
 }
 
 /*=========================================================
@@ -1902,7 +1902,7 @@ textarea.input {
 
 .order-summary .order-col .order-total {
   font-size: 24px;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .order-details .payment-method {
@@ -1920,7 +1920,7 @@ textarea.input {
 
 #newsletter.section {
   border-top: 2px solid #E4E7ED;
-  border-bottom: 3px solid #D10024;
+  border-bottom: 3px solid #ffa53e;
   margin-top: 30px;
 }
 
@@ -1962,7 +1962,7 @@ textarea.input {
   width: 160px;
   height: 40px;
   font-weight: 700;
-  background: #D10024;
+  background: #ffa53e;
   color: #FFF;
   border: none;
   border-radius: 0px 40px 40px 0px;
@@ -1996,7 +1996,7 @@ textarea.input {
 
 .newsletter .newsletter-follow li a:hover, .newsletter .newsletter-follow li a:focus {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #ffa53e;
 }
 
 /*=========================================================
@@ -2033,13 +2033,13 @@ textarea.input {
 
 .footer-links li i {
   margin-right: 15px;
-  color: #D10024;
+  color: #ffa53e;
   width: 14px;
   text-align: center;
 }
 
 .footer-links li a:hover {
-  color: #D10024;
+  color: #ffa53e;
 }
 
 .copyright {
@@ -2079,8 +2079,8 @@ textarea.input {
 }
 
 .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #ffa53e;
+  border-color: #ffa53e;
 }
 
 .slick-prev:before, .slick-next:before {
@@ -2125,7 +2125,7 @@ textarea.input {
 }
 
 .slick-dots li.slick-active button:before {
-  background-color: #D10024;
+  background-color: #ffa53e;
 }
 
 .custom-dots .slick-dots {
